# Dynamic-composition-of-Microservices

./: Dockerfile  MODULE.bazel  README.md  bazel-WIP2  bazel-bin  bazel-out  bazel-testlogs
builder/: application_layout.json  chain-config.json  dynamic_generator.py  generator.py
functions/f1/: BUILD  CameraFunc.java  f1.java  f1Helper.java  metadata.json
functions/f2/: BUILD  LicensePlateFunc.java  f2.java  metadata.json
functions/f3/: BUILD  DatabaseFunc.java  f3.java  metadata.json
functions/f4/: BUILD  f4.java  metadata.json
wrapper/: BUILD  Wrapper.java  chain-config.json
